unpackaged/main/default/objects/Cars_Price_Matrix__c/Cars_Price_Matrix__c.object-meta.xml
<CustomObject>
    <label>Cars Price Matrix</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Cars Price Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars Price Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>