unpackaged/main/default/objects/Cars_Price_Matrix__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan Car</fullName>
            </value>
            <value>
                <fullName>7 seater</fullName>
            </value>
            <value>
                <fullName>7 seater van</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>