unpackaged/main/default/objects/Cars_Price_Matrix__c/fields/Drop_off_Zone__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Zone__c</fullName>
    <label>Drop off Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DUBAI AIRPORT</fullName>
            </value>
            <value>
                <fullName>DEIRA</fullName>
            </value>
            <value>
                <fullName>SILICON OASIS</fullName>
            </value>
            <value>
                <fullName>BUR DUBAI</fullName>
            </value>
            <value>
                <fullName>Jumeirah</fullName>
            </value>
            <value>
                <fullName>PALM JUMEIRAH</fullName>
            </value>
            <value>
                <fullName>JEBEL ALI</fullName>
            </value>
            <value>
                <fullName>SHARJAH</fullName>
            </value>
            <value>
                <fullName>AJMAN</fullName>
            </value>
            <value>
                <fullName>SHARJAH AIRPORT</fullName>
            </value>
            <value>
                <fullName>UMM AL QUWAIN</fullName>
            </value>
            <value>
                <fullName>AL MAHA/BAB AL SHAMS</fullName>
            </value>
            <value>
                <fullName>ABU DHABI AIRPORT</fullName>
            </value>
            <value>
                <fullName>ABU DHABI CITY</fullName>
            </value>
            <value>
                <fullName>AL AIN</fullName>
            </value>
            <value>
                <fullName>RAS AL KHAIMA</fullName>
            </value>
            <value>
                <fullName>FUJAIRAH</fullName>
            </value>
            <value>
                <fullName>HATTA</fullName>
            </value>
            <value>
                <fullName>RUWAIS</fullName>
            </value>
            <value>
                <fullName>ZIGHY BAY</fullName>
            </value>
            <value>
                <fullName>DIBBA</fullName>
            </value>
            <value>
                <fullName>GHANTOOT</fullName>
            </value>
            <value>
                <fullName>Bab Al Shams</fullName>
            </value>
            <value>
                <fullName>MARINA MALL</fullName>
            </value>
            <value>
                <fullName>SALAM STREET</fullName>
            </value>
            <value>
                <fullName>MUSSAFAH</fullName>
            </value>
            <value>
                <fullName>YAS ISLAND</fullName>
            </value>
            <value>
                <fullName>MADINAT ZAYED</fullName>
            </value>
            <value>
                <fullName>DUBAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>