unpackaged/main/default/objects/Cars_Price_Matrix__c/fields/ETC_Car_Model__c.field-meta.xml
<CustomField>
    <fullName>ETC_Car_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Model</label>
    <referenceTo>ETCAR_Car__c</referenceTo>
    <relationshipLabel>Cars Price Matrix</relationshipLabel>
    <relationshipName>Cars_Price_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>