unpackaged/main/default/objects/Cars_Price_Matrix__c/fields/Pickup_Zone_G__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Zone_G__c</fullName>
    <label>Pickup Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETC_Pick_up_Drop_off_Zones</valueSetName>
    </valueSet>
</CustomField>