unpackaged/main/default/objects/Cars_Price_Matrix__c/fields/Price_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Hour__c</fullName>
    <label>Price Per Extra Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>