unpackaged/main/default/objects/Cars_Price_Matrix__c/recordTypes/Hourly.recordType-meta.xml
<RecordType>
    <fullName>Hourly</fullName>
    <active>true</active>
    <label>Hourly</label>
</RecordType>