unpackaged/main/default/objects/Cars_Price_Matrix__c/recordTypes/One_Way.recordType-meta.xml
<RecordType>
    <fullName>One_Way</fullName>
    <active>true</active>
    <label>One Way</label>
</RecordType>