unpackaged/main/default/objects/Cars_Price_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETC_Car_Model__c</columns>
    <columns>Pickup_Zone_G__c</columns>
    <columns>Drop_off_Zone_G__c</columns>
    <columns>Price__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>