unpackaged/main/default/objects/Cars_Price_Matrix__c/listViews/Hourly.listView-meta.xml
<ListView>
    <fullName>Hourly</fullName>
    <columns>NAME</columns>
    <columns>Price_Per_Hour__c</columns>
    <columns>ETC_Car_Model__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cars_Price_Matrix__c.Hourly</value>
    </filters>
    <label>Hourly</label>
</ListView>